changes in for adding helper file and related changes
git-svn-id: svn+ssh://172.132.45.1/proimport/trunk@24 d6c9e09e-0f0f-4299-a82f-988f4285321e

--- a/admin/language/en-GB/en-GB.com_profileimport.menu.ini
+++ b/admin/language/en-GB/en-GB.com_profileimport.menu.ini
@@ -1,3 +1,2 @@
-COM_BROADCAST="ProfileImport"
-COM_BROADCAST.COM_CONFIG="Settings"
-COM_BROADCAST.COM_QUEUE="Queue"
+COM_PROFILEIMPORT="SocialAds"
+COM_PROFILEIMPORT.COM_SETT="Settings"
