changes in for adding helper file and related changes
git-svn-id: svn+ssh://172.132.45.1/proimport/trunk@42 d6c9e09e-0f0f-4299-a82f-988f4285321e

--- a/site/language/en-GB/en-GB.com_profileimport.ini
+++ b/site/language/en-GB/en-GB.com_profileimport.ini
@@ -1,10 +1,15 @@
 ;setting
 PI_LOGIN="Please login into the site"
-PI_SETT="Import Your Profile From Social Network"
-CONN_SER="Connect to a service"
+PI_SETT="Update Your Profile From Social Network"
 ;other
-NOT_AUTH_KEY="You are not authorized to run the cron!"
-BC_CONN_TO="%s connected to %s on %s"
+PF_UPDATED_INFO="</br>Following Fields are updated %s of %s"
+PF_UPDATED_INFO_FAIL="</br>No fields are updated"
 NO_API_PLUG="No API Plugins are Configured"
-CLICK_API_IMG="Click Here to Import your Profile"
-
+CLICK_API_IMG="Click on the below images to update your Profile from different Social Network."
+PF_IMPORT_SUCCESS="Successfully updated Profile Information."
+PF_IMPORT_FAIL_S="Same information is present already of mappinfg fields."
+PF_IMPORT_FAIL="Failed to update Profile Information."
+PF_SURE_TO_IMPORT="Are you sure you want to change your current profile information according to the Social Network?"
+PF_INT_JOOMLA="Joomla"
+PF_INT_JS="Jomsocial"
+PF_INT_CB="Community Builder"
