Removed unwanted files in plugins
git-svn-id: svn+ssh://172.132.45.1/proimport/trunk@49 d6c9e09e-0f0f-4299-a82f-988f4285321e

--- a/techjoomlaAPI/plug_techjoomlaAPI_facebook/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_facebook.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_facebook/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_facebook.ini
@@ -20,6 +20,7 @@ LOG_SUCCESS="Successfully updated Facebook"
 NO_CONTACTS=" No Contact Found "
 API_KEY_PATH="Path To Api Key"
 CONTACTS_FOUND=" Contacts Found "
+API_DOCS_PATH="Docs for Mapping profile fields"
 
 
 
