--- a/techjoomlaAPI/plug_techjoomlaAPI_googleplus/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_googleplus.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_googleplus/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_googleplus.ini
@@ -14,4 +14,5 @@ NO_CONTACTS=" No Contact Found "
 API_KEY_PATH="Path To Api Key"
 LOG_GET_STATUS_SUCCESS="Success to get status"
 LOG_GET_STATUS_FAIL="status not found"
+API_DOCS_PATH="Docs for Mapping profile fields"
 
