--- a/techjoomlaAPI/plug_techjoomlaAPI_twitter/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_twitter.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_twitter/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_twitter.ini
@@ -19,6 +19,7 @@ LOG_SUCCESS="Successfully updated Twitter"
 NO_CONTACTS=" No Contact Found "
 API_KEY_PATH="Path To Api Key"
 CONTACTS_FOUND=" Contacts Found "
+API_DOCS_PATH="Docs for Mapping profile fields"
 
 
 
