Removed unwanted files in plugins
git-svn-id: svn+ssh://172.132.45.1/proimport/trunk@70 d6c9e09e-0f0f-4299-a82f-988f4285321e

--- a/admin/language/en-GB/en-GB.com_profileimport.ini
+++ b/admin/language/en-GB/en-GB.com_profileimport.ini
@@ -66,3 +66,7 @@ SELECT_API_DES="Select the API you want at your site"
 NO_API_PLUG="The API plugins are not enabled!"
 REG_DIR="Interation with"
 REG_DIR_DESC="Import your profile From Social Network to Jomsocial,joomla,Community Builder"
+PF_TITLE="Enter the title of profile import view in frontend"
+PF_TITLE_DESC="Enter the title of profile import view in frontend"
+PF_DETAILS="Enter the description of profile import view in frontend"
+PF_DETAILS_DESC="Enter the description of profile import view in frontend"
