--- a/site/language/en-GB/en-GB.com_profileimport.ini
+++ b/site/language/en-GB/en-GB.com_profileimport.ini
@@ -2,7 +2,7 @@
 PI_LOGIN="Please login into the site"
 PI_SETT="Update Your Profile From Social Network"
 ;other
-PF_UPDATED_INFO="</br>Following Fields are updated %s of %s"
+PF_UPDATED_INFO="</br>Following Fields are updated %s."
 PF_UPDATED_INFO_FAIL="</br>No fields are updated"
 NO_API_PLUG="No API Plugins are Configured"
 CLICK_API_IMG="Click on the below images to update your Profile from different Social Network."
