Removed unwanted files in plugins
git-svn-id: svn+ssh://172.132.45.1/proimport/trunk@87 d6c9e09e-0f0f-4299-a82f-988f4285321e

--- a/techjoomlaAPI/plug_techjoomlaAPI_googleplus/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_googleplus.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_googleplus/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_googleplus.ini
@@ -15,4 +15,6 @@ API_KEY_PATH="Path To Api Key"
 LOG_GET_STATUS_SUCCESS="Success to get status"
 LOG_GET_STATUS_FAIL="status not found"
 API_DOCS_PATH="Docs for Mapping profile fields"
+CB_NOT_INSTALLED="Community Builder not installed.If you want to integrate profileimport with Community Builder please install it at your site."
+CB_NOT_INSTALLED="Jomsocial not installed.If you want to integrate profileimport with Jomsocial please install it at your site."
 
