--- a/techjoomlaAPI/plug_techjoomlaAPI_linkedin/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_linkedin.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_linkedin/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_linkedin.ini
@@ -15,4 +15,6 @@ API_KEY_PATH="Path To Api Key"
 LOG_GET_STATUS_SUCCESS="Success to get status"
 LOG_GET_STATUS_FAIL="status not found"
 API_DOCS_PATH="Docs for Mapping profile fields"
+CB_NOT_INSTALLED="Community Builder not installed.If you want to integrate profileimport with Community Builder please install it at your site."
+CB_NOT_INSTALLED="Jomsocial not installed.If you want to integrate profileimport with Jomsocial please install it at your site."
 
