--- a/techjoomlaAPI/plug_techjoomlaAPI_twitter/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_twitter.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_twitter/language/en-GB/en-GB.plg_techjoomlaAPI_plug_techjoomlaAPI_twitter.ini
@@ -20,6 +20,8 @@ NO_CONTACTS=" No Contact Found "
 API_KEY_PATH="Path To Api Key"
 CONTACTS_FOUND=" Contacts Found "
 API_DOCS_PATH="Docs for Mapping profile fields"
+CB_NOT_INSTALLED="Community Builder not installed.If you want to integrate profileimport with Community Builder please install it at your site."
+CB_NOT_INSTALLED="Jomsocial not installed.If you want to integrate profileimport with Jomsocial please install it at your site."
 
 
 
