changes to remove joomla word
git-svn-id: svn+ssh://172.132.45.1/proimport/trunk@92 d6c9e09e-0f0f-4299-a82f-988f4285321e

--- a/admin/language/en-GB/en-GB.com_profileimport.ini
+++ b/admin/language/en-GB/en-GB.com_profileimport.ini
@@ -37,7 +37,7 @@ BC_ABOUT="About"
 ABOUT1="Profile Import From Social Site for your Joomla website !"
 ABOUT2="Profile Import allows you to :"
 ABOUT3="Sync your Profile  on Leading Social Networks"
-ABOUT4="Import your profile from Social Networks to Joomla,JomSocial,Community Builder"
+ABOUT4="Import your profile from Social Networks to JomSocial,Community Builder"
 ABOUT5="Sync your Profile  on Leading Social Networks"
 ABOUT6="Currently Supports Facebook, Twitter, LinkedIn. Partial Support for Google+"
 ABOUT7="Configure Your Component for best Usage"
