--- a/site/language/en-GB/en-GB.com_profileimport.ini
+++ b/site/language/en-GB/en-GB.com_profileimport.ini
@@ -3,12 +3,12 @@ PI_LOGIN="Please login into the site"
 PI_SETT="Update Your Profile From Social Network"
 ;other
 PF_UPDATED_INFO="</br>Following Fields are updated %s."
-PF_UPDATED_INFO_FAIL="</br>No fields are updated"
+PF_UPDATED_INFO_FAIL="</br>No fields are updated or same profile information present already."
 NO_API_PLUG="No API Plugins are Configured"
 CLICK_API_IMG="Click on the below images to update your Profile from different Social Network."
 PF_IMPORT_SUCCESS="Successfully updated Profile Information."
 PF_IMPORT_FAIL_S="Same information is present already of mappinfg fields."
-PF_IMPORT_FAIL="Failed to update Profile Information."
+PF_IMPORT_FAIL="Failed to update Profile Information or same profile information is present."
 PF_SURE_TO_IMPORT="Are you sure you want to change your current profile information according to the Social Network?"
 PF_INT_JOOMLA="Joomla"
 PF_INT_JS="Jomsocial"
