Added files form broadcast
git-svn-id: svn+ssh://172.132.45.1/proimport/trunk@102 d6c9e09e-0f0f-4299-a82f-988f4285321e

--- a/techjoomlaAPI/plug_techjoomlaAPI_facebook/language/zh-TW/zh-TW.plg_techjoomlaAPI_plug_techjoomlaAPI_facebook.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_facebook/language/zh-TW/zh-TW.plg_techjoomlaAPI_plug_techjoomlaAPI_facebook.ini
@@ -20,6 +20,10 @@ LOG_SUCCESS="成功更新到Facebook"
 NO_CONTACTS=" 無法找到可用的聯絡人 "
 API_KEY_PATH="API金鑰路徑"
 CONTACTS_FOUND=" 找到聯絡人 "
+API_DOCS_PATH="Docs for Mapping profile fields"
+CB_NOT_INSTALLED="Community Builder not installed.If you want to integrate profileimport with Community Builder please install it at your site."
+JS_NOT_INSTALLED="Jomsocial not installed.If you want to integrate profileimport with Jomsocial please install it at your site."
+
 
 
 
