--- a/techjoomlaAPI/plug_techjoomlaAPI_twitter/language/pt-BR/pt-BR.plg_techjoomlaAPI_plug_techjoomlaAPI_twitter.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_twitter/language/pt-BR/pt-BR.plg_techjoomlaAPI_plug_techjoomlaAPI_twitter.ini
@@ -19,6 +19,10 @@ LOG_SUCCESS="Successfully updated Twitter"
 NO_CONTACTS=" No Contact Found "
 API_KEY_PATH="Path To Api Key"
 CONTACTS_FOUND=" Contacts Found "
+API_DOCS_PATH="Docs for Mapping profile fields"
+CB_NOT_INSTALLED="Community Builder not installed.If you want to integrate profileimport with Community Builder please install it at your site."
+JS_NOT_INSTALLED="Jomsocial not installed.If you want to integrate profileimport with Jomsocial please install it at your site."
+
 
 
 
