--- a/techjoomlaAPI/plug_techjoomlaAPI_twitter/language/zh-TW/zh-TW.plg_techjoomlaAPI_plug_techjoomlaAPI_twitter.ini
+++ b/techjoomlaAPI/plug_techjoomlaAPI_twitter/language/zh-TW/zh-TW.plg_techjoomlaAPI_plug_techjoomlaAPI_twitter.ini
@@ -19,6 +19,10 @@ LOG_SUCCESS="成功更新到Twitter"
 NO_CONTACTS=" 找不到聯絡人 "
 API_KEY_PATH="API金鑰路徑"
 CONTACTS_FOUND=" 找到聯絡人 "
+API_DOCS_PATH="Docs for Mapping profile fields"
+CB_NOT_INSTALLED="Community Builder not installed.If you want to integrate profileimport with Community Builder please install it at your site."
+JS_NOT_INSTALLED="Jomsocial not installed.If you want to integrate profileimport with Jomsocial please install it at your site."
+
 
 
 
