error while including jomsocial toolbar to jomsocial version less than 2.4 Given extra parameter to include js toolbar issue no 10054 (ticket no 4039 )
git-svn-id: svn+ssh://172.132.45.1/proimport/trunk@106 d6c9e09e-0f0f-4299-a82f-988f4285321e

--- a/admin/language/en-GB/en-GB.com_profileimport.ini
+++ b/admin/language/en-GB/en-GB.com_profileimport.ini
@@ -70,3 +70,7 @@ PF_TITLE="Enter the title of profile import view in frontend"
 PF_TITLE_DESC="Enter the title of profile import view in frontend"
 PF_DETAILS="Enter the description of profile import view in frontend"
 PF_DETAILS_DESC="Enter the description of profile import view in frontend"
+SHOW_JS_TOOLBAR="JomSocial Toolbar inside Profileimport"
+DESC_SHOW_JS_TOOLBAR="Shows JomSocial Toolbar inside Profileimport views."
+PF_NO="No"
+PF_YES="Yes"
