--- a/admin/language/pt-BR/pt-BR.com_profileimport.ini
+++ b/admin/language/pt-BR/pt-BR.com_profileimport.ini
@@ -87,3 +87,7 @@ PURG_QUEUE_DESC="All the sent entires other than the limit will be deleted from 
 SELECT_API="Select the API"
 SELECT_API_DES="Select the API you want at your site"
 NO_API_PLUG="The API plugins are not enabled!"
+SHOW_JS_TOOLBAR="JomSocial Toolbar inside Profileimport"
+DESC_SHOW_JS_TOOLBAR="Shows JomSocial Toolbar inside Profileimport views."
+PF_NO="No"
+PF_YES="Yes"
