--- a/admin/language/zh-TW/zh-TW.com_profileimport.ini
+++ b/admin/language/zh-TW/zh-TW.com_profileimport.ini
@@ -87,3 +87,7 @@ PURG_QUEUE_DESC="超過此字數的動態將自動從排程中刪除。"
 SELECT_API="選擇使用的社群API"
 SELECT_API_DES="選擇與您網站同步的社群媒體API"
 NO_API_PLUG="社群API外掛尚未被啟用!"
+SHOW_JS_TOOLBAR="JomSocial Toolbar inside Profileimport"
+DESC_SHOW_JS_TOOLBAR="Shows JomSocial Toolbar inside Profileimport views."
+PF_NO="No"
+PF_YES="Yes"
